Fixed-19793: Area Frontend- Reload Captcha button misaligned

--- a/app/design/frontend/Magento/blank/Magento_Customer/web/css/source/_module.less
+++ b/app/design/frontend/Magento/blank/Magento_Customer/web/css/source/_module.less
@@ -337,7 +337,9 @@
 
     .control.captcha-image {
         .lib-css(margin-top, @indent__s);
-
+        .captcha-reload {
+            margin-top: -10px;
+        }
         .captcha-img {
             vertical-align: middle;
         }
