--- a/app/design/frontend/Magento/luma/Magento_Customer/web/css/source/_module.less
+++ b/app/design/frontend/Magento/luma/Magento_Customer/web/css/source/_module.less
@@ -318,7 +318,9 @@
 
     .control.captcha-image {
         .lib-css(margin-top, @indent__s);
-
+        .captcha-reload {
+            margin-top: -10px;
+        }
         .captcha-img {
             vertical-align: middle;
         }
